Cleaned up and made codebase more object oriented